--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <label for="channel">Twitch channel:</label>
                     <input type="text" id="channel" name="channel" value="twitch" required><br>
 
-                    <label for="admin">Admin user (if different):</label>
-                    <input type="text" id="admin" name="admin" value=""><br>
+                    <label for="admin">Additional admin users (optional, comma separated):</label>
+                    <input type="text" id="admin" name="admins_csv" value=""><br>
 
                     <label for="command-query">Query command:</label>
                     <input type="text" id="command-query" name="cmd_query" value="!query" required><br>
